@startuml database_schema
!define TABLE(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define PK(x) <u>x</u>
!define FK(x) <i>x</i>

hide methods
hide stereotypes

' Thêm dòng này để các đường quan hệ thành đường thẳng/vuông góc
skinparam linetype ortho

skinparam class {
  BackgroundColor #FFF8F8
  BorderColor #CC4444
  ArrowColor #883333
  HeaderBackgroundColor #E87070
  HeaderFontColor #FFFFFF
  FontSize 12
}

' =====================
' USER & AUTH
' UC1 Đăng nhập, UC2 Đăng xuất, UC41 Đăng ký
' UC42 Khôi phục mật khẩu, UC3 Cập nhật thông tin cá nhân
' =====================

TABLE(users, "users") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  email : VARCHAR(255) NOT NULL UNIQUE
  password_hash : VARCHAR(255) NOT NULL
  role : ENUM('buyer','seller','admin') NOT NULL
  full_name : VARCHAR(255) NOT NULL
  avatar_url : TEXT
  phone : VARCHAR(20)
  address : TEXT
  is_active : TINYINT(1) NOT NULL DEFAULT 1
  email_verified_at : DATETIME
  reset_password_token : VARCHAR(255)
  reset_token_expires_at : DATETIME
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

' =====================
' PRODUCTS
' UC33 Xem chi tiết sản phẩm, UC32 Quản lý sản phẩm (admin)
' UC5 Quản lý sản phẩm (seller), UC42 Đăng bán sản phẩm
' =====================

TABLE(categories, "categories") {
  PK(id) : INT UNSIGNED AUTO_INCREMENT
  --
  name : VARCHAR(100) NOT NULL
  slug : VARCHAR(100) NOT NULL UNIQUE
  parent_id : INT UNSIGNED DEFAULT NULL
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

TABLE(products, "products") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(seller_id) : BIGINT UNSIGNED NOT NULL
  FK(category_id) : INT UNSIGNED NOT NULL
  title : VARCHAR(255) NOT NULL
  description : TEXT
  price : DECIMAL(15,2) NOT NULL
  stock_quantity : INT UNSIGNED NOT NULL DEFAULT 0
  thumbnail_url : TEXT
  status : ENUM('active','inactive','banned') NOT NULL DEFAULT 'active'
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

TABLE(product_images, "product_images") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(product_id) : BIGINT UNSIGNED NOT NULL
  image_url : TEXT NOT NULL
  sort_order : TINYINT UNSIGNED NOT NULL DEFAULT 0
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

' =====================
' CART & ORDERS
' UC34 Giỏ hàng, UC6 Đặt hàng, UC11 Thanh toán trực tuyến
' UC31 Quản lý đơn hàng, UC23 Xem lịch sử đơn hàng
' UC14 Chấp nhận hoặc từ chối đơn, UC20 Giao hàng
' =====================

TABLE(carts, "carts") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(buyer_id) : BIGINT UNSIGNED NOT NULL UNIQUE
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

TABLE(cart_items, "cart_items") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(cart_id) : BIGINT UNSIGNED NOT NULL
  FK(product_id) : BIGINT UNSIGNED NOT NULL
  quantity : INT UNSIGNED NOT NULL DEFAULT 1
  unit_price : DECIMAL(15,2) NOT NULL
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

TABLE(orders, "orders") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(buyer_id) : BIGINT UNSIGNED NOT NULL
  FK(seller_id) : BIGINT UNSIGNED NOT NULL
  total_amount : DECIMAL(15,2) NOT NULL
  shipping_address : TEXT NOT NULL
  status : ENUM('pending','accepted','rejected','shipping','delivered','cancelled','refunded') NOT NULL DEFAULT 'pending'
  payment_status : ENUM('unpaid','paid','refunded') NOT NULL DEFAULT 'unpaid'
  payment_method : VARCHAR(50)
  payment_transaction_id : VARCHAR(255)
  note : TEXT
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

TABLE(order_items, "order_items") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(order_id) : BIGINT UNSIGNED NOT NULL
  FK(product_id) : BIGINT UNSIGNED NOT NULL
  quantity : INT UNSIGNED NOT NULL
  unit_price : DECIMAL(15,2) NOT NULL
  subtotal : DECIMAL(15,2) NOT NULL
}

' =====================
' REVIEWS & COMMENTS
' UC36 Đánh giá sản phẩm, UC38 Bình luận
' =====================

TABLE(reviews, "reviews") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(product_id) : BIGINT UNSIGNED NOT NULL
  FK(buyer_id) : BIGINT UNSIGNED NOT NULL
  FK(order_id) : BIGINT UNSIGNED NOT NULL
  rating : TINYINT UNSIGNED NOT NULL COMMENT '1-5'
  comment : TEXT
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

TABLE(comments, "comments") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(product_id) : BIGINT UNSIGNED NOT NULL
  FK(user_id) : BIGINT UNSIGNED NOT NULL
  parent_id : BIGINT UNSIGNED DEFAULT NULL
  content : TEXT NOT NULL
  is_hidden : TINYINT(1) NOT NULL DEFAULT 0
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

' =====================
' MESSAGES & DISPUTES
' UC17 Nhắn tin, UC21 Mở Tranh chấp
' UC22 Theo dõi tranh chấp 3 bên, UC29 Phán xử Tranh chấp
' UC15 Xử lý Hoàn tiền
' =====================

TABLE(messages, "messages") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(sender_id) : BIGINT UNSIGNED NOT NULL
  FK(receiver_id) : BIGINT UNSIGNED NOT NULL
  FK(order_id) : BIGINT UNSIGNED NOT NULL
  content : TEXT NOT NULL
  is_read : TINYINT(1) NOT NULL DEFAULT 0
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

TABLE(disputes, "disputes") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(order_id) : BIGINT UNSIGNED NOT NULL
  FK(opened_by) : BIGINT UNSIGNED NOT NULL
  FK(resolved_by) : BIGINT UNSIGNED DEFAULT NULL
  reason : TEXT NOT NULL
  status : ENUM('open','in_review','resolved','closed') NOT NULL DEFAULT 'open'
  resolution : TEXT
  refund_amount : DECIMAL(15,2) DEFAULT NULL
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

TABLE(dispute_messages, "dispute_messages") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(dispute_id) : BIGINT UNSIGNED NOT NULL
  FK(sender_id) : BIGINT UNSIGNED NOT NULL
  content : TEXT NOT NULL
  attachment_url : TEXT
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

' =====================
' POINTS & REVENUE
' UC39 Tích điểm, UC26 Quản lý doanh thu
' =====================

TABLE(point_transactions, "point_transactions") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(user_id) : BIGINT UNSIGNED NOT NULL
  FK(order_id) : BIGINT UNSIGNED DEFAULT NULL
  points : INT NOT NULL COMMENT 'am = tieu diem'
  type : ENUM('earn','redeem','expire') NOT NULL
  description : VARCHAR(255)
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

TABLE(revenue_records, "revenue_records") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(seller_id) : BIGINT UNSIGNED NOT NULL
  FK(order_id) : BIGINT UNSIGNED NOT NULL UNIQUE
  gross_amount : DECIMAL(15,2) NOT NULL
  platform_fee : DECIMAL(15,2) NOT NULL DEFAULT 0.00
  net_amount : DECIMAL(15,2) NOT NULL
  recorded_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
}

' =====================
' REPORTS & VIOLATIONS
' UC37 Báo cáo người dùng, UC40 Xử lý báo cáo vi phạm
' =====================

TABLE(reports, "reports") {
  PK(id) : BIGINT UNSIGNED AUTO_INCREMENT
  --
  FK(reporter_id) : BIGINT UNSIGNED NOT NULL
  FK(reported_user_id) : BIGINT UNSIGNED DEFAULT NULL
  FK(product_id) : BIGINT UNSIGNED DEFAULT NULL
  FK(comment_id) : BIGINT UNSIGNED DEFAULT NULL
  reason : TEXT NOT NULL
  status : ENUM('pending','reviewed','dismissed','action_taken') NOT NULL DEFAULT 'pending'
  admin_note : TEXT
  FK(reviewed_by) : BIGINT UNSIGNED DEFAULT NULL
  created_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP
  updated_at : DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
}

' =====================
' RELATIONSHIPS
' =====================

users          ||--o{ products           : "seller_id"
users          ||--|| carts              : "buyer_id"
users          ||--o{ orders             : "buyer_id"
users          ||--o{ orders             : "seller_id"
users          ||--o{ reviews            : "buyer_id"
users          ||--o{ comments           : "user_id"
users          ||--o{ messages           : "sender_id"
users          ||--o{ disputes           : "opened_by"
users          ||--o{ point_transactions : "user_id"
users          ||--o{ revenue_records    : "seller_id"
users          ||--o{ reports            : "reporter_id"

categories     ||--o{ products           : "category_id"
products       ||--o{ product_images     : "product_id"
products       ||--o{ cart_items         : "product_id"
products       ||--o{ order_items        : "product_id"
products       ||--o{ reviews            : "product_id"
products       ||--o{ comments           : "product_id"
products       ||--o{ reports            : "product_id"

carts          ||--o{ cart_items         : "cart_id"
orders         ||--o{ order_items        : "order_id"
orders         ||--|| revenue_records    : "order_id"
orders         ||--o{ disputes           : "order_id"
orders         ||--o{ messages           : "order_id"
orders         ||--o{ point_transactions : "order_id"
orders         ||--o{ reviews            : "order_id"

disputes       ||--o{ dispute_messages   : "dispute_id"
comments       ||--o{ reports            : "comment_id"

@enduml
